--- a/src/Components/Guide/Guide.css
+++ b/src/Components/Guide/Guide.css
@@ -95,12 +95,12 @@
   margin-bottom: 15px;
 }
 
-.step-title {
+/* .step-title {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 8px;
   color: #e11d48;
-}
+} */
 
 .step-block ul {
   padding-left: 20px;
